Sat Nov 21 08:44:21 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): add debug information to NODE_STR
	  strings as default.
	  [Feature #11725]

	* insns.def (freezestring): add new instruction to support adding
	  debug information for dynamically constracted strings.

	* compile.c (iseq_compile_each): support adding debug information
	  for NODE_DSTR with freezestring instruction.

	* error.c (rb_error_frozen): change the debug information ID name
	  id_debug_created_info and this field should have a 2 element array
	  containing path and line information.

	* defs/id.def: ditto.

	* test/ruby/test_rubyoptions.rb: catch up this fix.

	* test/ruby/test_iseq.rb: now frozen strings are not same.

Sat Nov 21 04:34:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (rb_str_intern): should not freeze the receiver itself
	  unexpectedly.  [ruby-core:71611] [Bug #11721]

Fri Nov 20 23:15:18 2015  Naotoshi Seo  <sonots@gmail.com>

	* lib/logger.rb: expose logger mutex
	  [fix GH-541] Patch by @arthurnn

Fri Nov 20 15:05:28 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* Added missing reference of GitHub

Fri Nov 20 14:57:01 2015  Trevor Rowe  <trevorrowe@gmail.com>

	* lib/net/http.rb: Fixed regression for Net::HTTP::PUT with "Expect-100"
	  header. [fix GH-949]
	* test/net/http/test_http.rb: added test.

Fri Nov 20 14:39:56 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/http.rb: set hostname before call ossl_ssl_set_session.
	  [Bug #11401][ruby-core:70152][fix GH-964] Patch by @mkarnebeek

Fri Nov 20 12:53:19 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* array.c: clarify docs for take_while/drop_while samples.
	  [ci skip][fix GH-1028] Patch by @leriksen

Fri Nov 20 12:48:04 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/socket/socket.c: remove mention of :UNIX in getaddrinfo().
	  It's typically not a support option.
	  [ci skip][fix GH-990] Patch by @eam

Fri Nov 20 12:44:06 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>